Fix UI layout issue in categories and added margin top and bottom box shadows for each posts

--- a/src/blog/post/Post.scss
+++ b/src/blog/post/Post.scss
@@ -9,7 +9,9 @@
   transition: box-shadow 0.5s;
 
   &:hover {
-    box-shadow: 5px 10px 8px #888;
+    box-shadow: 
+    inset 0 15px 8px -10px #888,
+    inset 0 -15px 8px -10px #888; 
     transition: box-shadow 0.5s;
   }
 }
